shopmon-staging/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shopmon-staging
  namespace: shopmon-staging
spec:
  parentRefs:
    - name: eg
      namespace: default
      sectionName: staging-fos-gg-https
  hostnames:
    - shopmon.staging.fos.gg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api
          port: 8080
