shopmon-staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopmon-staging
  namespace: shopmon-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - shopmon.staging.fos.gg
      secretName: shopmon-staging-tls
  rules:
    - host: shopmon.staging.fos.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
